docs/book/samples/appa/overload_order_check.kso
fn fact n
  n * fact (n - 1)

fn fact 0
  1

main = print "{fact 3}"
